# quirc

./: CMakeLists.txt
lib/: CMakeLists.txt
